--- a/simple-express/package.json
+++ b/simple-express/package.json
@@ -5,12 +5,19 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "watch": "npx browser-sync start --config bs-config.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "^3.7.2",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "mysql": "^2.18.1",
     "pug": "^3.0.2"
+  },
+  "devDependencies": {
+    "browser-sync": "^2.26.14"
   }
 }
